--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:XMAOkcjeQfpYO+0cmY/8uUYbV0ePiDilzL9d0RiNhDA=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://lara-testy.herokuapp.com
 
 LOG_CHANNEL=stack
