--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:XMAOkcjeQfpYO+0cmY/8uUYbV0ePiDilzL9d0RiNhDA=
-APP_DEBUG=false
-APP_URL=http://lara-testy.herokuapp.com
+APP_DEBUG=true
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
