--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "gulp-sass": "^4.1.0",
         "gulp-sourcemaps": "^2.6.5",
         "laravel-mix": "^5.0.1",
+        "laravel-mix-blade-reload": "^1.0.1",
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.27.0",
